// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow-function.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const x = () => [].includes(true) || "ontouchend" in document

const y = () => [] in x

=====================================output=====================================
const x = () => [].includes(true) || "ontouchend" in document;

const y = () => [] in x;

================================================================================
`;

exports[`arrow-function-invalid.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
() => [] in x

=====================================output=====================================
() => [] in x;

================================================================================
`;
